New push for website

--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
 # ----
 # Site
 
-title: Edition Template
-url: "https://long-pig.cloudvent.net"
+title: Visualize Your Research
+url: "https://farispriadi.github.io"
 baseurl:
 google_analytics_key:
 show_full_navigation: true
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product documentation template for Jekyll.
+description: Programming dan Visualisasi Data
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Edition Template
+  name: Faris Priadi
   links:
-    - https://github.com/CloudCannon/edition-jekyll-template
+    - https://github.com/farispriadi
 
 # -----
 # Build
