--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Visualize Your Research
+title: Tell Your Research Story
 url: "https://farispriadi.github.io"
 baseurl:
 google_analytics_key:
