--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Tell Your Research Story
-url: "https://farispriadi.github.io"
+url: "https://farispriadi.github.io/courses"
 baseurl:
 google_analytics_key:
 show_full_navigation: true
